# nox-editor

./: .gitignore  Readme.md
.run/: Run Backend.run.xml  Run Frontend.run.xml
projects/nox-backend/: Cargo.toml
projects/nox-backend/src/: lib.rs  main.rs
projects/nox-frontend/: Cargo.toml  Readme.md  package.json
projects/nox-frontend/src/: lib.rs  main.rs
projects/nox-frontend/tests/: main.rs
projects/nox-types/: Cargo.toml  index.html
projects/nox-types/src/: lib.rs
projects/nox-types/src/cell/: mod.rs
projects/nox-types/src/errors/: mod.rs  runtime.rs
projects/nox-types/src/errors/for_3rd/: for_tungstenite.rs  mod.rs
projects/nox-types/src/server/: main2.rs
projects/nox-types/src/users/: mod.rs
