[package]
name = "nox-backend"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
serde = "1.0.152"
serde_derive = "1.0.152"
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr"]  }
monaco = { version = "0.3.0", features = ["yew-components"] }
yew-websocket = "0.2.0"

# Used for the randomess, not needed usually.
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"
