[package]
name = "nox-backend"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
serde = "1.0.152"
serde_derive = "1.0.152"
async-tungstenite = { version = "0.20.0", features = ["tokio-rustls-webpki-roots"] }
futures = "0.3.26"
log = "0.4.17"
env_logger = "0.9.0"
tokio = { version = "1.25.0", features = ["full"] }

# Used for the randomess, not needed usually.
getrandom = { version = "0.2.8", features = ["js"] }
rand = "0.8.5"


[dependencies.nox-types]
path = "../nox-types"